--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "apify-grancanaria-events",
-  "version": "1.0.0",
-  "description": "Apify actor for scraping cultural events from Gran Canaria's cultural agenda",
+  "version": "1.1.0",
+  "description": "Apify actor scraping cultural events from cultura.grancanaria.com",
+  "type": "commonjs",
   "main": "src/main.js",
+  "scripts": {
+    "start": "node src/main.js",
+    "dev": "NODE_OPTIONS='--trace-warnings' node src/main.js"
+  },
   "dependencies": {
     "apify": "^3.1.8",
     "crawlee": "^3.5.4"
-  },
-  "scripts": {
-    "start": "node src/main.js"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
